--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,16 @@
         }
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script>
+        function updateDateTime() {
+            const now = new Date();
+            const dateTimeString = now.toLocaleString(); // Adjust format as needed
+            document.getElementById('datetime').textContent = dateTimeString;
+        }
+
+        setInterval(updateDateTime, 1000); // Update every second
+        updateDateTime(); // Initial call to set the date and time immediately
+    </script>
     
 </head>
 <body>
@@ -37,6 +47,7 @@
                         </li>
                     </ul>
                 </div>
+                <div id="datetime"></div>
             </nav>
         
         {% block content %}
